# wattserve

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BENCHMARK.md  BENCHMARK_COMPONENT_ABLATION.md  CLAUDE.md  CMakeLists.txt  FULLBLOCK.md  MICROBENCH.md  README.md  bench.py  demo.py  main.py  pyproject.toml  qwen3.py  qwen3_config.py
python/: bench.py  bench_llama.py  cache.py  gemm_layernorm.py  llama.py  llama_config.py  main.py  qwen3.py
python/models/: llama.py  llama_config.py  qwen3_config.py
python/monitor/: gpu_monitor.py
report/mlp_replay_vs_chain/: PPT_OUTLINE.md  REPORT.md
results/gemm_continuous/latest/: GEMM_CONTINUOUS.md  PUBLISHED_FROM.txt  README.md
results/gemm_continuous/latest/locked_1110/: BENCHMARK.md  metadata.json  summary.csv
results/gemm_continuous/latest/locked_1320/: BENCHMARK.md  metadata.json  summary.csv
results/gemm_continuous/latest/nsys/: cuda_gpu_kern_sum_active.csv  cuda_gpu_trace_active.csv  kernel_bucket_summary.csv  kernel_change_summary.md  metadata.json  nvtx_kern_sum_active.csv  profile_command.txt
results/gemm_continuous/latest/nsys_locked_1110/: cuda_gpu_kern_sum_active.csv  cuda_gpu_trace_active.csv  kernel_bucket_summary.csv  kernel_change_summary.md  metadata.json  nvtx_kern_sum_active.csv  profile_command.txt
results/gemm_continuous/latest/nsys_locked_1320/: cuda_gpu_kern_sum_active.csv  cuda_gpu_trace_active.csv  kernel_bucket_summary.csv  kernel_change_summary.md  metadata.json  nvtx_kern_sum_active.csv  profile_command.txt
results/gemm_continuous/latest/primary/: BENCHMARK.md  metadata.json  summary.csv
results/gemm_replay_vs_chain/latest/: BENCHMARK.md
results/gemm_replay_vs_chain/latest/a100_40g_sxm/: BENCHMARK.md  metadata.json  summary.csv
results/llama_component_ablation_prefill/latest/: BENCHMARK.md  metadata.json
results/llama_component_ablation_prefill/latest/a100_40g_pcie/: BENCHMARK.md  metadata.json  summary.csv
results/llama_component_ablation_prefill/latest/monitor/: 13B_prompt1024_baseline.csv  13B_prompt1024_replace_activation.csv  13B_prompt128_replace_activation.csv  13B_prompt128_replace_ln.csv  13B_prompt128_replace_rope.csv  13B_prompt16_replace_activation.csv  13B_prompt16_replace_rope.csv  13B_prompt2048_baseline.csv  13B_prompt2048_replace_activation.csv  13B_prompt2048_replace_ln.csv  13B_prompt256_baseline.csv  13B_prompt256_replace_attention.csv  13B_prompt256_replace_ln.csv  13B_prompt256_replace_rope.csv  13B_prompt32_baseline.csv  13B_prompt32_replace_ln.csv  13B_prompt32_replace_rope.csv  13B_prompt4096_replace_attention.csv  13B_prompt4096_replace_ln.csv  13B_prompt4096_replace_rope.csv  13B_prompt512_baseline.csv  13B_prompt512_replace_activation.csv  13B_prompt512_replace_attention.csv  13B_prompt512_replace_ln.csv  13B_prompt64_replace_activation.csv  13B_prompt8192_replace_attention.csv  13B_prompt8192_replace_ln.csv  13B_prompt8192_replace_rope.csv  34B_prompt1024_baseline.csv  34B_prompt1024_replace_attention.csv  34B_prompt1024_replace_ln.csv  34B_prompt128_baseline.csv  34B_prompt128_replace_attention.csv  34B_prompt128_replace_rope.csv  34B_prompt16_replace_activation.csv  34B_prompt16_replace_attention.csv  34B_prompt16_replace_ln.csv  34B_prompt16_replace_rope.csv  34B_prompt2048_replace_attention.csv  34B_prompt256_baseline.csv  (+69 more)
results/llama_replace_ln_prefill/latest/: BENCHMARK.md  metadata.json  summary.csv
results/llama_replace_ln_prefill/latest/a100_40g_pcie/: BENCHMARK.md  metadata.json  summary.csv
results/llama_replace_ln_prefill/latest/a100_40g_sxm/: BENCHMARK.md  metadata.json
results/llama_replace_ln_prefill/latest/monitor/: 13B_prompt1024_baseline.csv  13B_prompt1024_replace_ln.csv  13B_prompt128_replace_ln.csv  13B_prompt16_replace_ln.csv  13B_prompt2048_replace_ln.csv  13B_prompt256_baseline.csv  13B_prompt32_baseline.csv  13B_prompt4096_baseline.csv  13B_prompt4096_replace_ln.csv  13B_prompt512_baseline.csv  13B_prompt512_replace_ln.csv  13B_prompt64_baseline.csv  13B_prompt64_replace_ln.csv  13B_prompt8192_replace_ln.csv  34B_prompt1024_baseline.csv  34B_prompt128_replace_ln.csv  34B_prompt2048_baseline.csv  34B_prompt2048_replace_ln.csv  34B_prompt256_baseline.csv  34B_prompt256_replace_ln.csv  34B_prompt4096_baseline.csv  34B_prompt4096_replace_ln.csv  34B_prompt512_baseline.csv  34B_prompt64_baseline.csv  34B_prompt64_replace_ln.csv  34B_prompt8192_baseline.csv  70B_prompt1024_replace_ln.csv  70B_prompt128_baseline.csv  70B_prompt128_replace_ln.csv  70B_prompt16_replace_ln.csv  70B_prompt32_baseline.csv  (+18 more)
results/state_chain_block_sweep/latest/: BENCHMARK.md  NORM_TIME_GAP.md  PUBLISHED_FROM.txt  metadata.json  summary.csv
results/two_gemm_norm_shape_n1_sweep/latest/: GEMM_NORM_RATIO.md  PUBLISHED_FROM.txt  README.md  excluded_points.csv  excluded_timing_anomaly_points.csv  summary_timing_anomaly_filtered.csv  transition_summary_filtered.csv
results/two_gemm_norm_steady_window_sweep/latest/: GEMM_NORM_RATIO.md  PUBLISHED_FROM.txt  README.md
scripts/benchmarks/: README.md  device_snapshot.py  profile_gemm_continuous_nsys.py  profile_gemm_replay_vs_chain_memory.py  profile_stack_vs_repeat.py  publish_llama_operator_microbench.py  render_llama_component_ablation_report.py  render_llama_replace_ln_report.py  render_state_chain_block_gap_plots.py  render_two_gemm_norm_phase_timeline_plots.py  run_fullblock_operator_phase_profile.py  run_gemm_continuous.py  run_gemm_replay_vs_chain_microbench.py  run_gemm_rmsnorm_depth_microbench.py  run_llama_component_ablation_matrix.py  run_llama_operator_microbench.py  run_llama_replace_ln_matrix.py  run_state_chain_block_sweep.py  run_two_gemm_norm_phase_sweep.py  run_two_gemm_norm_phase_timeline.py  run_two_gemm_norm_ratio_sweep.py  run_two_gemm_norm_shape_n1_sweep.py  run_two_gemm_norm_steady_window_sweep.py  state_chain_utils.py
scripts/benchmarks/cupti_event_monitor/: Makefile  README.md  cupti_active_event_monitor.cpp
scripts/gpu_clock/: lock_gpu_clock.sh  reset_gpu_clock.sh
tests/python/: test_gpu_monitor.py  test_llama_benchmark_matrix.py  test_llama_component_ablation_benchmark.py
(+408 files in other folders)
